Deprecate restconf.common.util.MultivaluedHashMap
This is a custom-coded class, which has a direct competitor in
javax.ws.rs.core. Deprecate it in favor of the standard class.

Change-Id: I2397c4a3b72d410a39806c1b147d9816b95eb875
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>